--- a/Dissertation/introduction.tex
+++ b/Dissertation/introduction.tex
@@ -31,3 +31,11 @@
 \formbytotal{totalcount@table}{таблиц}{у}{ы}{}.
 Список литературы содержит
 \formbytotal{citenum}{наименован}{ие}{ия}{ий}.
+
+\textbf{Первая глава} посвящена вопросам анализа текущего состояния исследований, модульному оборудованию и месту систем машинного зрения в промышленном производстве. Приводится описание разрабатываемой модульной трехкоординатной платформы, включая структурную схему взаимодействия модулей и каналов передачи данных.
+
+\textbf{Вторая глава} содержит понятие о производительности оборудования, методах его расчёта и о влияющих на него факторах, а также описывает пути его повышение с внедрением систем технического зрения на отдельные участки производственных линий.
+
+\textbf{Третья глава} описывает теоретические основы построения систем машинного зрения, в том числе используемые в работе методы распознавания образов и обработки изображений.
+
+\textbf{Четвертая глава} посвящена анализу полученных результатов работы, включая оценочные характеристики получаемых значений, а также дальнейшим перспективам разрабатываемого направления.
