--- a/Dissertation/part2.tex
+++ b/Dissertation/part2.tex
@@ -2,7 +2,7 @@
 
 \section{Понятие производительности оборудования} \label{sect2_1}
 
-\section{Расчёт производственной мощности} \label{sect2_2}
+\section{Расчёт производственной мощности трехкоординатной платформы для изделия типа печатная плата} \label{sect2_2}
 
 \section{Методы повышения производительности при помощи систем машинного зрения} \label{sect2_3}
 
