--- a/Dissertation/part3.tex
+++ b/Dissertation/part3.tex
@@ -2,16 +2,6 @@
 
 \section{Теория распознавания образов} \label{sect3_1}
 
-\subsection{Классификация по форме}
-
-\subsection{Классификация по положению}
-
-\subsection{Классификация по цвету}
-
-\subsection{Базовые положения}
-
-\subsection{Методы распознавания}
-
 В целом, можно выделить следующие методы распознавания образов:
 
 \begin{enumerate}
@@ -21,18 +11,18 @@
 	\item Экспертный метод, основанный на непрерывном обучении экспертной системы в процессе эксплуатации.
 \end{enumerate}
 
-\section{Алгоритмы обработки изображений} \label{sect3_2}
+\section{Основные признаки целевых объектов} \label{sect3_2}
+
+\section{Анализ и синтез алгоритмов обработки изображений} \label{sect3_3}
 
 \subsection{Общие положения задач}
 
-\subsection{Принцип кластеризации}
+\subsection{Базовые задачи, выполняемые трехкоординатной платформой}
 
-\subsection{Методы распознавания без обучения}
+\subsection{Расширенные задачи, требующие дополнительных модулей для СТЗ}
 
-\section{Оптические системы, применяемые в системах машинного зрения} \label{sect3_3}
+\subsection{Унификация алгоритмов}
 
-\section{Основные признаки целевых объектов} \label{sect3_4}
+\section{Оптические системы, применяемые в системах машинного зрения} \label{sect3_4}
 
-\section{Основные функции системы машинного зрения, условия и порядок работы} \label{sect3_5}
-
-\section{Выводы по третьей главе} \label{sect3_6}
+\section{Выводы по третьей главе} \label{sect3_5}
