--- a/Dissertation/title.tex
+++ b/Dissertation/title.tex
@@ -7,10 +7,10 @@
 \end{center}
 %
 \vspace{0pt plus4fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
-\IfFileExists{images/itmo_2.png}{
+\IfFileExists{images/logo.pdf}{
   \begin{minipage}[b]{0.5\linewidth}
     \begin{flushleft}
-      \includegraphics[height=3.5cm]{itmo_2}
+      \includegraphics[height=3.5cm]{logo}
     \end{flushleft}
   \end{minipage}%
   \begin{minipage}[b]{0.5\linewidth}
