--- a/common/styles.tex
+++ b/common/styles.tex
@@ -155,7 +155,7 @@
 %    pdfpagelabels=false,        % set PDF page labels (true|false)
     plainpages=false,           % Forces page anchors to be named by the Arabic form  of the page number, rather than the formatted form
     colorlinks,                 % ссылки отображаются раскрашенным текстом, а не раскрашенным прямоугольником, вокруг текста
-    linkcolor={linkcolor},      % цвет ссылок типа ref, eqref и подобных
+    linkcolor={black},      % цвет ссылок типа ref, eqref и подобных
     citecolor={citecolor},      % цвет ссылок-цитат
     urlcolor={urlcolor},        % цвет гиперссылок
 %    hidelinks,                  % Hide links (removing color and border)
